--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@ title: projects
   </div> -->
   {% for projects in site.projects reversed%}
   <div class="fl w-100 w-50-ns pa3">
-    <a href="{{projects.url}}" class="db link dim">
+    <a href="{{projects.url}}.html" class="db link dim">
       <!--         <img src="{{ projects.image }}" alt="{{ projects.title }}" class="w-100 db outline black-10"/> -->
       <img
         src="https://source.unsplash.com/user/gndclouds/800x600"
