--- a/clips.html
+++ b/clips.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: notes
+title: clips
 ---
 
 
@@ -29,10 +29,9 @@ title: notes
 
 <section class="fl pa2">
 
-{% for notes in site.notes reversed %}
+{% for clips in site.clips reversed %}
     <div class="fl w-50 w-30-m w-30-l pa3">
       <a href="{{notes.url}}" class="db link dim">
-        <img src="{{ notes.image }}" alt="{{ notes.title }}" class="w-100 db outline black-10"/>
         <div class="fl w-100 ">
           <h3 class="fl w-50">
             {{ notes.title }}
